--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dw2020-devops-calc-modulo",
+  "name": "dw20-devops-calc-modulo",
   "version": "1.0.0",
   "description": "",
   "main": "modulo.js",
