--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/gh03ty/dw20-devops-calc-modulo/issues"
   },
-  "homepage": "https://github.com/gh03ty/dw20-devops-calc-modulo#readme"
+  "homepage": "https://github.com/gh03ty/dw20-devops-calc-modulo#readme",
+  "devDependencies": {
+    "jest": "^26.6.3"
+  }
 }
